Fix: Footer alignment due to new email address

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -73,6 +73,12 @@
   max-width: 35rem;
 }
 
+@media (max-width: 1320px) {
+  .right1 {
+    margin-right: 4rem !important;
+  }
+}
+
 @media (max-width: 1200px) {
   .left1 {
     margin-right: 8rem;
@@ -87,7 +93,19 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
+  .right1 {
+    margin-right: 0rem !important;
+  }
+}
+
+@media (max-width: 950px) {
+  .right {
+    margin-left: -60px;
+  }
+}
+
+/* @media (max-width: 768px) {
   .left1 {
     margin-right: 4rem;
   }
@@ -99,9 +117,13 @@
   .right1 {
     margin-right: 4rem;
   }
-}
+} */
 
-@media (max-width: 600px) {
+@media (max-width: 850px) {
+  .right {
+    margin-left: 0px;
+  }
+
   .top {
     flex-direction: column;
     align-items: center;
@@ -142,9 +164,7 @@
   .social {
     transform: translateX(-2rem);
   }
-}
 
-@media (max-width: 600px) {
   .dataEmail2 {
     margin-left: 0 !important;
     margin-top: 0.5rem !important;
